<resources>
    <string name="app_name">Mov Ticket</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="on_boarding_one_title">Now Playing</string>
    <string name="on_boarding_one_msg">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="on_boarding_two_title">Pre Sale</string>
    <string name="on_boarding_two_msg">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="on_boarding_three_title">Cashless</string>
    <string name="on_boarding_three_msg">Gunakan e-wallet untuk\nberbagai transaksi</string>
    <string name="Memulai">MEMULAI</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">MASUK</string>
    <string name="buatakunbaru">BUAT AKUN BARU</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="pilih_bangku">PILIH BANGKU</string>
    <string name="pilih_bangk">Pilih Bangku</string>
    <string name="checkout">Checkout</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cinema">Cinema</string>
    <string name="simpan_data_baru">SIMPAN DATA BARU</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersisa">Saldo Tersisa</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="history">History</string>
    <string name="daftar">DAFTAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_up">Top Up</string>
</resources>
